<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgMedicine"
        android:src="@drawable/medicine"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/medicineimage" />

    <EditText
        android:id="@+id/edtMedicineName"
        android:hint="@string/medicine_name"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgMedicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="medicineName" />

    <EditText
        android:id="@+id/edtMedicineUses"
        android:hint="@string/uses"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edtMedicineName"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Uses" />

    <EditText
        android:id="@+id/edtStorageCondition"
        android:hint="@string/storage_condition"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMedicineUses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="StorageType"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtSideEffects"
        android:hint="@string/side_effects"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtStorageCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="sideEffects"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSaveMedicine"
        android:text="@string/save"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edtSideEffects"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
