<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="medicine"
            type="com.android_wavelength.medicinesaver.models.Medicine" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgMedicine"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/medicineimage"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <TextView
            android:id="@+id/txtMedicineName"
            android:text="@{medicine.name}"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imgMedicine"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtMedicineUses"
            android:text="@{medicine.uses}"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            app:layout_constraintLeft_toLeftOf="@+id/txtMedicineName"
            app:layout_constraintTop_toBottomOf="@id/txtMedicineName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtMedicineStorageCondition"
            android:text="@{medicine.storage}"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            app:layout_constraintLeft_toLeftOf="@+id/txtMedicineUses"
            app:layout_constraintTop_toBottomOf="@id/txtMedicineUses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtMedicineSideEffects"
            android:text="@{medicine.sideEffects}"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            app:layout_constraintLeft_toLeftOf="@+id/txtMedicineStorageCondition"
            app:layout_constraintTop_toBottomOf="@id/txtMedicineStorageCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imgDeleteMedicine"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="245dp"
            android:layout_marginTop="440dp"
            android:src="@drawable/delete"
            android:contentDescription="@string/delete"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtMedicineName" />

        <ImageView
            android:id="@+id/imgEditMedicine"
            android:src="@drawable/editimg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/edit"
            app:layout_constraintLeft_toRightOf="@id/imgDeleteMedicine"
            app:layout_constraintTop_toTopOf="@id/imgDeleteMedicine" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>